--- a/.github/workflows/ansible-lint.yml
+++ b/.github/workflows/ansible-lint.yml
@@ -12,6 +12,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.ref }}
-          token: ${{ secret.AUTOMATION_PAT }}
+          token: ${{ secrets.AUTOMATION_PAT }}
       - name: 'Ansible Lint'
         uses: ansible/ansible-lint@v24.9.2
