--- a/tasks/debian/install_dependencies.yml
+++ b/tasks/debian/install_dependencies.yml
@@ -2,7 +2,7 @@
 # tasks/debian/install_dependencies.yml
 
 - name: Ensure required packages are installed (Debian)
-  apt:
+  ansible.builtin.apt:
     name:
       - apt-transport-https
       - ca-certificates
@@ -13,16 +13,16 @@
     update_cache: yes
 
 - name: Add Kubernetes APT repository key
-  apt_key:
+  ansible.builtin.apt_key:
     url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
     state: present
 
 - name: Add Kubernetes APT repository
-  apt_repository:
+  ansible.builtin.apt_repository:
     repo: "deb https://apt.kubernetes.io/ kubernetes-{{ ansible_distribution_release | lower }} main"
     state: present
 
 - name: Update APT cache after adding Kubernetes repo
-  apt:
+  ansible.builtin.apt:
     update_cache: yes
   when: ansible_os_family == "Debian"
