--- a/vars/main.yml
+++ b/vars/main.yml
@@ -7,7 +7,7 @@ cni_plugins:
   flannel:
     manifest_url: "https://raw.githubusercontent.com/flannel-io/flannel/master/Documentation/kube-flannel.yml"
   weave:
-    manifest_url: "https://cloud.weave.works/k8s/net?k8s-version=$(kubectl version | base64 | tr -d '\n')"
+    manifest_url: "https://cloud.weave.works/k8s/net?k8s-version={{ kube_version_encoded }}"
 
 cni_plugins_arch:
   calico:
@@ -17,5 +17,5 @@ cni_plugins_arch:
     x86_64: "https://raw.githubusercontent.com/flannel-io/flannel/master/Documentation/kube-flannel.yml"
     arm64: "https://raw.githubusercontent.com/flannel-io/flannel/master/Documentation/kube-flannel-arm64.yml"
   weave:
-    x86_64: "https://cloud.weave.works/k8s/net?k8s-version=$(kubectl version | base64 | tr -d '\n')"
-    arm64: "https://cloud.weave.works/k8s/net-arm64?k8s-version=$(kubectl version | base64 | tr -d '\n')"
+    x86_64: "https://cloud.weave.works/k8s/net?k8s-version={{ kube_version_encoded }}"
+    arm64: "https://cloud.weave.works/k8s/net-arm64?k8s-version={{ kube_version_encoded }}"
