--- a/.github/workflows/codeql.yaml
+++ b/.github/workflows/codeql.yaml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        language: [ 'python', 'javascript', 'shell' ] # Add other languages as needed
+        language: [ 'python' ] # Add other languages as needed
     steps:
     - name: 'Checkout'
       uses: actions/checkout@v2
