--- a/tasks/common/install_kubernetes.yml
+++ b/tasks/common/install_kubernetes.yml
@@ -24,6 +24,7 @@
     cmd: swapoff -a
   become: true
   when: ansible_swaptotal_mb > 0
+  changed_when: false
 
 - name: Ensure swap is disabled in /etc/fstab
   ansible.builtin.replace:
