--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -1,3 +1,28 @@
-- name: Run Molecule Test
-  run: molecule test
-  working-directory: ./../..
+# molecule/default/molecule.yml
+---
+dependency:
+  name: galaxy
+driver:
+  name: docker
+platforms:
+  - name: instance
+    image: "python:3.9"  # Specify a base image
+    privileged: true
+    pre_build_image: true
+provisioner:
+  name: ansible
+  lint:
+    name: ansible-lint
+scenario:
+  name: default
+  test_sequence:
+    - lint
+    - destroy
+    - dependency
+    - create
+    - converge
+    - idempotence
+    - verify
+    - destroy
+verifier:
+  name: ansible
