--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -1,24 +1,34 @@
+---
 # .github/workflows/molecule.yml
 name: Molecule Test
+
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
     - name: 'Checkout'
       uses: actions/checkout@v2
+
     - name: 'Set up Python'
       uses: actions/setup-python@v2
       with:
         python-version: '3.9'
+
     - name: 'Install dependencies'
       run: |
         python -m pip install --upgrade pip
         pip install ansible ansible-lint molecule[docker]
+
+    - name: 'Set up Docker Buildx'
+      uses: docker/setup-buildx-action@v2
+
     - name: 'Run Molecule Test'
-      run: |
-        molecule test
+      run: molecule test
+      working-directory: ./molecule/default/molecule.yml  # Adjust to the path of molecule.yml
