--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -26,11 +26,18 @@ jobs:
         python -m pip install --upgrade pip
         pip install ansible ansible-lint molecule[docker]
 
-    - name: 'Set up Docker Buildx'
-      uses: docker/setup-buildx-action@v2
+    - name: 'Install Docker'
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y docker.io
+        sudo usermod -aG docker $USER
 
     - name: 'Start Docker'
       run: sudo service docker start
 
+    - name: 'Verify Docker Installation'
+      run: docker --version
+
     - name: 'Run Molecule Test'
       run: molecule test
+
