--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -24,19 +24,7 @@ jobs:
     - name: 'Install dependencies'
       run: |
         python -m pip install --upgrade pip
-        pip install ansible ansible-lint molecule[docker]
-
-    - name: 'Install Docker'
-      run: |
-        curl -fsSL https://get.docker.com -o get-docker.sh
-        sudo sh get-docker.sh
-        sudo usermod -aG docker $USER
-
-    - name: 'Start Docker'
-      run: sudo service docker start
-
-    - name: 'Verify Docker Installation'
-      run: docker --version
+        pip install ansible ansible-lint molecule
 
     - name: 'Run Molecule Test'
       run: molecule test
