--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -9,22 +9,11 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
+  molecule:
     runs-on: ubuntu-latest
-
     steps:
-    - name: 'Checkout'
-      uses: actions/checkout@v2
-
-    - name: 'Set up Python'
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.9'
-
-    - name: 'Install dependencies'
-      run: |
-        python -m pip install --upgrade pip
-        pip install ansible ansible-lint molecule
-
-    - name: 'Run Molecule Test'
-      run: molecule test
+      - uses: actions/checkout@v2
+        with:
+          path: "${{ github.repository }}"
+      - name: Molecule
+        uses: monolithprojects/action-molecule@v1.4.1
