--- a/.checkov.yml
+++ b/.checkov.yml
@@ -1,5 +1,5 @@
 ---
 # Ignore specific paths (e.g., tests or documentation folders)
 skip_paths:
-  - molecule/
-  - .github/
+  - 'molecule/'
+  - '.github/'
