--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -15,5 +15,17 @@ jobs:
       - uses: actions/checkout@v2
         with:
           path: "${{ github.repository }}"
+
+      - name: 'Set up Python'
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'
+  
+      - name: 'Install Ansible Dependencies'
+        run: |
+          python -m pip install --upgrade pip
+          pip install ansible ansible-lint molecule
+          ansible-galaxy collection install -r collections/requirements.yml
+
       - name: Molecule
         uses: monolithprojects/action-molecule@v1.4.1
