--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -25,7 +25,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install ansible ansible-lint molecule
-          ansible-galaxy collection install -r collections/requirements.yml
+          ansible-galaxy collection install -r requirements.yml
 
       - name: Molecule
         uses: monolithprojects/action-molecule@v1.4.1
